# docs/swagger.json
@@ -304,54 +304,6 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "которые пересекались заданными в запросе судами в заданный временной промежуток.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Chart"
-                ],
-                "summary": "список морских карт",
-                "parameters": [
-                    {
-                        "description": "Входные параметры: идентификаторы судов, стартовая дата, конечная дата.",
-                        "name": "InputVesselsInterval",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.InputVesselsInterval"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/zones": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "которые пересекали указанные морские карты в заданный временной промежуток.",
                 "consumes": [
                     "application/json"
@@ -381,6 +333,54 @@
                             "type": "array",
                             "items": {
                                 "type": "integer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/zones": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "которые пересекались заданными в запросе судами в заданный временной промежуток.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chart"
+                ],
+                "summary": "список морских карт",
+                "parameters": [
+                    {
+                        "description": "Входные параметры: идентификаторы судов, стартовая дата, конечная дата.",
+                        "name": "InputVesselsInterval",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.InputVesselsInterval"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
                             }
                         }
                     },
